@@ -43,199 +43,3 @@ o restore.sh: -n always on. No dump.sh doesn't do this
 o make hist and yesterday understand -c flag? - makes no sense
 o use full hostname not the short one. $HOST is just used...
   $HOST is way easier and more portable as it is in bash
-
-
-:DONE:
-o refactored perl scripts
- 2 July: done
-
-o refactor the scripts
-o kill whitespace
-o use read and dd in restore scripts
-o use booleans in stead of integers
-  1 July: done
-
-o remove NAME as req arg from dump.sh, new argument -N ala rdup
-  12 May: implemented
-
-o quickstart (a5 format) for how make backups and how to restore
-  dump.sh examples + restore.sh examples, hist.sh, yesterday.sh
-  8 May: made small 1 page doc
-
-o -e (store lists in backup dir) does not work with remote backups
-  8 May: fixed, disallow it
-
-o when not root, don't chown? Or at least show no errors
-  more general: -q switch
-  7 May: all chown errors are redirected to >&2
-
-o all echo's should go to stdout, stderr is not available 
-  7 May: done
-
-o dump/restore: bandwidth shaping?
-  3 May: done, see the -l flag in both scripts
-
-o dump/restore: use attr to set userspace uid/gid on the files
-  to make the restore work?
-  2 May: done and fixed. Only for linux atm
-
-o better error message if somebody forgets a -c or something
-  1 May: sanity_check function which checks the important variables
-
-o make dump.sh and restore.sh work with a -c option
-  put ssh in it, remote dump/restore. Ala @miekg@elektron.atoom.net
-  from hdup. 
-  1 May: added: -c miekg@elektron.atoom.net has become the syntax
-
-o restore.sh: -p option, to cut off a few leading dirs, just as patch?
-  should be implemented in rorrim.sh
-  30 Apr: implemented in rorrim.sh and in restore.sh
-
-o restore.sh, dump.sh -v: so show files
-  29 Apr: fixed
-
-o restore.sh: multiple restore directories?
-  29 Apr: fixed
-
-o make meta restore script: restore.sh in line with dump.sh
-  28 Apr: started script, looks very much like dump.sh
-
-o paths in scripts
-  25 Apr 2006: added @sbindir@/@bindir@ to them
-
-o add -c to gzip/crypt
-  23 Apr 2006: done
-
-o dump.sh add -z and -k
-  23 Apr 2006: done
-
-o monthday -c support + completely rewritten
-  23 Apr 2006: done
-
-o -z for unzip in hist.sh, yesterday.sh
-  21 Apr 2006: done
-
-o split up rdgrep.sh in dir and file grep?
-  10 Apr 2006: done
-  
-o check relative filenames: hist.sh ../blaat
-  09 Apr 2006: done, just works :)
-
-o ported mirror.sh and hist.sh and yesterday.sh
-  09 Apr 2006: done
-
-o check cp -RP on symlinks to directories on linux/freebsd
-  port to freebsd
-  08/09 Apr 2006
-
-o where to place to aux. scripts? /usr/lib/rdup ??
-  14 Mar 2006: I just place them in /usr/sbin
-
-o depend on 'ls -o' in hist.sh, could use some portability love
-  5 Mar 2006; we now depend on stat...
-
-o multiple backups same hosts, check incremental/full fails
-  5 Mar 2006; check existance for 1 dir deeper
-
-o Encryption: it changes the file size! This means it cannot be
-  directory done in a pipe - you first need to encrypt it and then
-  do something with it. yesterday.sh was updated as well.
-  28 Feb 2006 - see crypt.sh and gzip.sh
-
-o valgrind and g_free
-  done, could use another look, but I find it acceptable
-  22 Feb 2006
-  
-o port over some scripts from hdup2 to remove old backups
-  22 Feb - not doing it
-
-o ignore or handle signals? Needed to decide what to do with the FILELIST
-  and the timestamp, at least sigpipe, fail gracefully.
-  25 Jan - we just exit
-
-o getline is GNU-ism, freebsd has fgetln
-  configure adapted
-  19 Jan. Ported
-
-o shell script portability, date +%s is now also used...
-  19 Jan. FreeBSD 6 has date +%s - enough for me...
-
-o hist.sh go back more months?
-  10 Jan
-
-o implement -n for yesterday/hist
-  29 Dec 2006, core function is there, but is it not finished yet
-  1 Jan, finished it.
-
-o make uninstall
-  30 Dec 2006
-
-o handle difference between relative and absolute links
-  30 Dec 2006
-
-o Add dryrun to all scripts, which makes them echo all the stuff
-  -N (dry run)
-  30 Dec 2006
-
-o consolidate shell script, write generic functions that can 
-  by sourced and used.
-  26 Dec 2006
-  29 Dec 2006
-
-o make install. Use a /etc/rdup directory
-  27 Dec 2005: make install was implemented
-
-o -0 is not yet implemented
-  rdup filelist is \n delimited, as you cannot parse nulls with scanf
-  Our internal list is NEVER null delimited.
-  26 Dec 2005
-  27 Dec 2005
-  
-o make it more efficient, GSList is not the quickest
-  data type from GLib. Performance/scalability.
-  Switch to a tree type.
-  27 Dec 2005
-  
-o valgrind rdup. Done the remaining leaks look to be coming
-  from glib: (or I'm doing something stupid)
-        ==9997== 38994 bytes in 40 blocks are still reachable in loss record 2 of 2
-        ==9997==    at 0x1B8FF8A2: malloc (vg_replace_malloc.c:149)
-        ==9997==    by 0x1B938F0F: g_malloc (in /usr/lib/libglib-2.0.so.0.800.3)
-        ==9997==    by 0x1B949EA5: g_strdup (in /usr/lib/libglib-2.0.so.0.800.3)
-        ==9997==    by 0x1B93A77E: g_allocator_new (in /usr/lib/libglib-2.0.so.0.800.3)
-        ==9997==    by 0x1B9493AF: g_slist_prepend (in /usr/lib/libglib-2.0.so.0.800.3)
-        ==9997==    by 0x8049371: g_slist_read_file (rdup.c:102)
-        ==9997==    by 0x8049574: main (rdup.c:179)
-
-        ....
-        ==9997== LEAK SUMMARY:
-        ==9997==    definitely lost: 0 bytes in 0 blocks.
-        ==9997==      possibly lost: 0 bytes in 0 blocks.
-        ==9997==    still reachable: 39014 bytes in 41 blocks.
-        ==9997==         suppressed: 0 bytes in 0 blocks.
-  25 Dec 2005
-
-o portability, first try to compile it on FreeBSD
-  It compiles just fine under FreeBSD - made an error using the autoconf
-  tools
-  25 Dec 2005
-
-o the .nobackup files or not added to the filelist
-  This is now done, allthough I think I've created a memleak
-  in crawler.c
-  25 Dec 2005
-
-o improve error reporting
-  All errors are printed to stderrr, and prefixed with "** ".
-  No seperate function is needed for this.
-  25 Dec 2005
-
-o always use the full path
-  call getcwd before crawling if the path wasn't absolute.
-  25 Dec 2005
-
-o restore utilities, like yesterday or hist
-  yesterday.sh and hist.sh are added, 25 Dec 2005.
-
-o make directory seperator a define
-  done, 25 Dec 2005
