@@ -3,6 +3,7 @@ xxxx 2006: 0.2.16 Miek <miek@miek.nl>
    * some updates for Solaris 10
    configure:
    * added check for GNU make (isn't used yet)
+   * Solaris fixes (dirfd)
 
 
 1 Sep 2006: 0.2.15 Miek <miek@miek.nl>
